--- a/VolleyGo/Platforms/Android/AndroidManifest.xml
+++ b/VolleyGo/Platforms/Android/AndroidManifest.xml
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-	<application android:allowBackup="true" android:icon="@mipmap/appicon_android" android:roundIcon="@mipmap/appicon_android_round" android:supportsRtl="true">
-		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyB9v_6y-3vZoSF26ie9QA86oS1Q26fzdK0" />
+	<application android:allowBackup="true" 
+				 android:icon="@mipmap/appicon_android" 
+				 android:roundIcon="@mipmap/appicon_android_round" 
+				 android:supportsRtl="true">
+		<meta-data android:name="com.google.android.geo.API_KEY" android:value="@string/google_maps_key" />
 	</application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
